tests/cheri-ci/expected/0118-block_array_init_incomplete.error.c.expected
cheri-ci/0118-block_array_init_incomplete.error.c:3:8: error: constraint violation: invalid application of 'sizeof' to an incomplete type 'array  of char'
  char a[] = {sizeof(a), 0, 0}; // ERROR: glob has incomplete type
       ~~~    ^
ยง6.5.3.4#1, sentence 1: 
1   The sizeof operator shall not be applied to an expression that has function type or an
    incomplete type, to the parenthesized name of such a type, or to an expression that
    designates a bit-field member. The _Alignof operator shall not be applied to a
    function type or an incomplete type.
